Flask-Script Changelog
======================

Here you can see the full list of changes between each Flask-Script release.

Version 0.5.4-dev
-------------

No release date

- Drop support for Python 2.5

Version 0.5.3
-------------

Released on January 9, 2013.

- Fix nasty bug in Clean command that deletes all files

Version 0.5.2
-------------

Released on December 26, 2012.

- Change from module to package and refactor project structure
- Add BPython shell support
- Add Clean and ShowUrls commands
- Add Group, a simple way to group arguments

Version 0.5.1
-------------

Released on October 2nd, 2012.

- Fixed an issue where debug settings were being overridden if present in config.
- Expose 'passthrough_errors' on Server to disable error catching (useful to hook debuggers in (ex. pdb))

Version 0.5.0
-------------

Released on September 22, 2012.

- Sub-Manager support (see: http://flask-script.readthedocs.org/en/latest/index.html#sub-managers)