@@ -3,6 +3,15 @@ Flask-Script Changelog
 
 Here you can see the full list of changes between each Flask-Script release.
 
+Version 0.x.x-dev
+-----------------
+
+No release date
+
+- Support Python 2.6/2.7 and >= 3.3 using same source code.
+  Import necessary compatibility code from flask._compat module of current
+  Flask repo code.
+
 Version 0.5.4-dev
 -------------
 
